Fixed overflow error on mobile.

--- a/styles/header-footer.css
+++ b/styles/header-footer.css
@@ -31,7 +31,6 @@
 *, *::before, *::after {
   margin: 0;
   padding: 0;
-  /* outline: 2px solid green; */
 }
 
 /* Setting a baseline text-size */
@@ -39,6 +38,7 @@
 body {
   min-width: 100%;
   max-width: 100%;
+  background-color: var(--primary-color);
   
 }
 /* Top bar (div) disclaimer */
@@ -147,7 +147,6 @@ nav a:hover {
 }
 
 footer {
-
   width: 100%;
   height: 70px;
   display: grid;
@@ -221,6 +220,8 @@ footer img {
     grid-template-columns: 1fr;
     width: 50px;
     padding: 5px;
+    padding-bottom: 0;
+    overflow: hidden;
   }
   footer {
     height: 185px;
